# novusk

./: .config  .config_arm64  .config_x86  .config_x86.old  .config_xtensa32  .gitignore  Cargo.toml  Makefile
include/config/: auto.conf
lib/cinclude/: Cargo.toml  Makefile  lang.rs
lib/cinclude/bits/stdint_intn/src/: lib.rs
lib/cinclude/bits/stdint_uintn/src/: lib.rs
lib/cinclude/genheaders/: Cargo.toml
lib/cinclude/genheaders/src/: main.rs
lib/cinclude/src/: main.rs
lib/cinclude/stddef/src/: lib.rs
lib/cinclude/stdint/src/: lib.rs
lib/cinclude/stdlib/src/: lib.rs
lib/cinclude/string/src/: lib.rs
lib/cinclude/test/: Makefile  test.c
shell/: Cargo.toml
shell/src/: lib.rs  main.rs
