[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "shell"
path = "src/lib.rs"

[dependencies]

[dependencies.novuskinc]
git = "https://github.com/new-kernel/novuskinc/"
features = ["v4"]
